.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Earliest_Availability_Contract__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Availability_Contract__c</fullName>
    <description>Earliest Date a Candidate will be available for contract work, based on Availability Periods</description>
    <inlineHelpText>Earliest Date a Candidate will be available for contract work, based on Availability Periods</inlineHelpText>
    <label>Earliest Availability (Contract)</label>
    <summarizedField>TR1__Availability_Period__c.TR1__Start_Date__c</summarizedField>
    <summaryFilterItems>
        <field>TR1__Availability_Period__c.TR1__Type__c</field>
        <operation>equals</operation>
        <value>Available</value>
    </summaryFilterItems>
    <summaryForeignKey>TR1__Availability_Period__c.TR1__Contact__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>