.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Emergency_Department_Step_Down__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Department_Step_Down__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Department (Step Down)</label>
    <type>Checkbox</type>
</CustomField>