.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Estimated_arrival_date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_arrival_date__c</fullName>
    <label>Estimated arrival date</label>
    <type>Date</type>
</CustomField>