.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Facilities_not_to_work_at__c.field-meta.xml
<CustomField>
    <fullName>Facilities_not_to_work_at__c</fullName>
    <inlineHelpText>What facilities would rather not work at?</inlineHelpText>
    <label>Facilities not to work at</label>
    <type>TextArea</type>
</CustomField>