.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Facilities_not_to_work_at_R_R__c.field-meta.xml
<CustomField>
    <fullName>Facilities_not_to_work_at_R_R__c</fullName>
    <label>Facilities not to work at - R&amp;R</label>
    <type>TextArea</type>
</CustomField>