.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Facilities_preferred_to_work_at__c.field-meta.xml
<CustomField>
    <fullName>Facilities_preferred_to_work_at__c</fullName>
    <inlineHelpText>What facilities do you prefer to work at?</inlineHelpText>
    <label>Facilities preferred to work at</label>
    <type>TextArea</type>
</CustomField>