.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/First_Availability_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Availability_Update_Date__c</fullName>
    <description>Date of the first availability update made by this candidate.</description>
    <inlineHelpText>Date of the first availability update made by this candidate.</inlineHelpText>
    <label>First Availability Update Date</label>
    <type>DateTime</type>
</CustomField>