.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/First_Shift_Worked_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Shift_Worked_Date__c</fullName>
    <description>The date of the first approved shift for the candidate.</description>
    <inlineHelpText>The date of the first approved shift for the candidate.</inlineHelpText>
    <label>First Shift Worked Date</label>
    <type>Date</type>
</CustomField>