.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Flag_Text__c.field-meta.xml
<CustomField>
    <fullName>Flag_Text__c</fullName>
    <label>Flag Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>