.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Flu_Vax_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Flu_Vax_Expiry_Date__c</fullName>
    <label>Flu Vax Expiry Date</label>
    <type>Date</type>
</CustomField>