.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Gastroenterology__c.field-meta.xml
<CustomField>
    <fullName>Gastroenterology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gastroenterology</label>
    <type>Checkbox</type>
</CustomField>