.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/General_Medical_Surgical__c.field-meta.xml
<CustomField>
    <fullName>General_Medical_Surgical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Medical / Surgical</label>
    <type>Checkbox</type>
</CustomField>