.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Geriatrics_Aged_Care__c.field-meta.xml
<CustomField>
    <fullName>Geriatrics_Aged_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Geriatrics / Aged Care</label>
    <type>Checkbox</type>
</CustomField>