.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/GP__c.field-meta.xml
<CustomField>
    <fullName>GP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GP</label>
    <type>Checkbox</type>
</CustomField>