.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Gynaecology__c.field-meta.xml
<CustomField>
    <fullName>Gynaecology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gynaecology</label>
    <type>Checkbox</type>
</CustomField>