.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Home_and_Community_Care__c.field-meta.xml
<CustomField>
    <fullName>Home_and_Community_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home and Community Care</label>
    <type>Checkbox</type>
</CustomField>