.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/How_many_shift_per_week__c.field-meta.xml
<CustomField>
    <fullName>How_many_shift_per_week__c</fullName>
    <inlineHelpText>How many shifts per week are you looking for?</inlineHelpText>
    <label>How many shift per week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-2 shifts</fullName>
            </value>
            <value>
                <fullName>3-4 shifts</fullName>
            </value>
            <value>
                <fullName>5 shifts or more</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
            <value>
                <fullName>Max one per week</fullName>
                <isActive>false</isActive>
                <label>Max one per week</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>