.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/I_d_like_to_register_for__c.field-meta.xml
<CustomField>
    <fullName>I_d_like_to_register_for__c</fullName>
    <label>I&apos;d like to register for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Alliance Extra Staff - Adelaide</fullName>
            </value>
            <value>
                <fullName>Alliance Extra Staff - Albury</fullName>
            </value>
            <value>
                <fullName>Alliance Extra Staff - Marion</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Adelaide</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Albury</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Brisbane</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Canberra</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Geelong</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Gold Coast</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Melbourne</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Perth</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Sunshine Coast</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Sydney</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Townsville</fullName>
            </value>
            <value>
                <fullName>Alliance Nursing - Western Sydney</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>