.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/ID_Badge_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>ID_Badge_Created_Date__c</fullName>
    <description>The date when the candidate&apos;s last ID Badge was created.</description>
    <inlineHelpText>The date when the candidate&apos;s last ID Badge was created.</inlineHelpText>
    <label>ID Badge Created Date</label>
    <type>DateTime</type>
</CustomField>