.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Identification_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Identification_Document_Number__c</fullName>
    <inlineHelpText>This is the number of the primary identification document (e.g. Passport)</inlineHelpText>
    <label>Identification Document Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>