.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Inactive_Reason__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Reason__c</fullName>
    <label>Inactive Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not Service</fullName>
            </value>
            <value>
                <fullName>Credit check fail</fullName>
            </value>
            <value>
                <fullName>Terms Expired</fullName>
            </value>
            <value>
                <fullName>Service no longer Required</fullName>
            </value>
            <value>
                <fullName>Pending review</fullName>
            </value>
            <value>
                <fullName>Post review - Do not place / re-hire</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Dormant</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>