.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Induction_Date__c.field-meta.xml
<CustomField>
    <fullName>Induction_Date__c</fullName>
    <description>It reads the local date/time of the Induction session this candidate has been booked into.</description>
    <inlineHelpText>It reads the local date/time of the Induction session this candidate has been booked into.</inlineHelpText>
    <label>Induction Date</label>
    <type>DateTime</type>
</CustomField>