.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Infectious_Diseases__c.field-meta.xml
<CustomField>
    <fullName>Infectious_Diseases__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Infectious Diseases</label>
    <type>Checkbox</type>
</CustomField>