.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/interfere_with_your_ability_to_attend_w__c.field-meta.xml
<CustomField>
    <fullName>interfere_with_your_ability_to_attend_w__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Do you have any recurrent health problems that may interfere with your ability to attend work or perform your role? eg difficulties with shiftwork, drive a car</inlineHelpText>
    <label>interfere with your ability to attend w</label>
    <type>Checkbox</type>
</CustomField>