.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/International_Candidate__c.field-meta.xml
<CustomField>
    <fullName>International_Candidate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Candidate</label>
    <type>Checkbox</type>
</CustomField>