.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/International_notes__c.field-meta.xml
<CustomField>
    <fullName>International_notes__c</fullName>
    <label>International notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>