.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/International_stage__c.field-meta.xml
<CustomField>
    <fullName>International_stage__c</fullName>
    <label>International stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stage 1</fullName>
            </value>
            <value>
                <fullName>Stage 2</fullName>
            </value>
            <value>
                <fullName>Stage 3</fullName>
            </value>
            <value>
                <fullName>Stage 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>