.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date__c</fullName>
    <description>It reads the local date/time of the Interview session this candidate has been booked into.</description>
    <inlineHelpText>It reads the local date/time of the Interview session this candidate has been booked into.</inlineHelpText>
    <label>Interview Date</label>
    <type>DateTime</type>
</CustomField>