.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Is_Mailing_Address_Different__c.field-meta.xml
<CustomField>
    <fullName>Is_Mailing_Address_Different__c</fullName>
    <label>Is Mailing Address Different?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>