.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Landed_date__c.field-meta.xml
<CustomField>
    <fullName>Landed_date__c</fullName>
    <label>Landed date</label>
    <type>Date</type>
</CustomField>