.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Last_Availability_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Availability_Update_Date__c</fullName>
    <description>Last date when this candidate updated the availability.</description>
    <inlineHelpText>Last date when this candidate updated the availability.</inlineHelpText>
    <label>Last Availability Update Date</label>
    <type>DateTime</type>
</CustomField>