.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Last_Flu_Vax_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Flu_Vax_Requested_Date__c</fullName>
    <label>Last Flu Vax Requested Date</label>
    <type>DateTime</type>
</CustomField>