.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Latest_Confirmed_Shift_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Confirmed_Shift_Date__c</fullName>
    <description>This is used in the DLRS to pull the latest confirmed shift date for this candidate.</description>
    <inlineHelpText>This is used in the DLRS to pull the latest confirmed shift date for this candidate.</inlineHelpText>
    <label>Latest Confirmed Shift Date</label>
    <type>Date</type>
</CustomField>