.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/LMS_Id__c.field-meta.xml
<CustomField>
    <fullName>LMS_Id__c</fullName>
    <label>LMS Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>