.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/LMS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>LMS_Integration_Status__c</fullName>
    <label>LMS Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send To LMS</fullName>
            </value>
            <value>
                <fullName>Registered in LMS</fullName>
            </value>
            <value>
                <fullName>Unregister From LMS</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>