.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Long_length_Size__c.field-meta.xml
<CustomField>
    <fullName>Long_length_Size__c</fullName>
    <label>Long length Size:</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>2XL</fullName>
            </value>
            <value>
                <fullName>3XL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>