.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/lower_back_or_thoracic_YES__c.field-meta.xml
<CustomField>
    <fullName>lower_back_or_thoracic_YES__c</fullName>
    <inlineHelpText>Lower back, neck or thoracic spinal pain or strain (including back surgery)?
If YES please SPECIFY year, diagnosis, treatment,</inlineHelpText>
    <label>lower,back or thoracic YES</label>
    <type>TextArea</type>
</CustomField>