.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Marketing_consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing consent</label>
    <type>Checkbox</type>
</CustomField>