.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Maternity_Obstetrics__c.field-meta.xml
<CustomField>
    <fullName>Maternity_Obstetrics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maternity / Obstetrics</label>
    <type>Checkbox</type>
</CustomField>