.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Medical_Departments__c.field-meta.xml
<CustomField>
    <fullName>Medical_Departments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Departments</label>
    <type>Checkbox</type>
</CustomField>