.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Medical_Short_Stay_Unit__c.field-meta.xml
<CustomField>
    <fullName>Medical_Short_Stay_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Short Stay Unit</label>
    <type>Checkbox</type>
</CustomField>