.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/medications_that_would_impact_your_abil__c.field-meta.xml
<CustomField>
    <fullName>medications_that_would_impact_your_abil__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Any prescribed medications that would impact your ability to do your job effectively?</inlineHelpText>
    <label>medications that would impact your abil</label>
    <type>Checkbox</type>
</CustomField>