.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Neurology__c.field-meta.xml
<CustomField>
    <fullName>Neurology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Neurology</label>
    <type>Checkbox</type>
</CustomField>