.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Number_of_Shift_Hours_Today__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shift_Hours_Today__c</fullName>
    <description>The number of hours worked or confirmed to work later today.</description>
    <inlineHelpText>The number of hours worked or confirmed to work later today.</inlineHelpText>
    <label>Number of Shift Hours Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>