.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <label>Occupation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assistant in Nursing</fullName>
                <isActive>false</isActive>
                <label>Assistant in Nursing</label>
            </value>
            <value>
                <fullName>Catering Supervisor</fullName>
            </value>
            <value>
                <fullName>Cleaner</fullName>
            </value>
            <value>
                <fullName>Clinical Midwife</fullName>
            </value>
            <value>
                <fullName>Clinical Midwife Consultant</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse</fullName>
            </value>
            <value>
                <fullName>Clinical Nurse Consultant</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>CSSD Attendant</fullName>
            </value>
            <value>
                <fullName>Director of Nursing</fullName>
            </value>
            <value>
                <fullName>Director of Nursing - Midwifery</fullName>
            </value>
            <value>
                <fullName>Enrolled Nurse</fullName>
            </value>
            <value>
                <fullName>Executive Director of Nursing</fullName>
            </value>
            <value>
                <fullName>Executive Director of Nursing / Midwifery</fullName>
            </value>
            <value>
                <fullName>Facility Manager</fullName>
            </value>
            <value>
                <fullName>Food Service Assistant</fullName>
            </value>
            <value>
                <fullName>Kitchen Hand</fullName>
            </value>
            <value>
                <fullName>Maintenance Worker</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
                <isActive>false</isActive>
                <label>Management</label>
            </value>
            <value>
                <fullName>Medical and Healthcare Assistant</fullName>
                <isActive>false</isActive>
                <label>Medical and Healthcare Assistant</label>
            </value>
            <value>
                <fullName>Midwifery Unit Manager</fullName>
            </value>
            <value>
                <fullName>Nurse Unit Manager</fullName>
            </value>
            <value>
                <fullName>Nursing Assistant</fullName>
            </value>
            <value>
                <fullName>Patient Services Assistant (PSA)</fullName>
            </value>
            <value>
                <fullName>Personal Care Worker</fullName>
            </value>
            <value>
                <fullName>Registered Midwife</fullName>
            </value>
            <value>
                <fullName>Registered Nurse</fullName>
            </value>
            <value>
                <fullName>Specialist Nurse</fullName>
                <isActive>false</isActive>
                <label>Specialist Nurse</label>
            </value>
            <value>
                <fullName>Theatre Technician</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>