.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/OCCUPATIONAL_HEALTH__c.field-meta.xml
<CustomField>
    <fullName>OCCUPATIONAL_HEALTH__c</fullName>
    <inlineHelpText>OCCUPATIONAL HEALTH	Have you ever had:</inlineHelpText>
    <label>OCCUPATIONAL HEALTH: Have you ever had:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lower back, neck or thoracic spinal pain or strain (including back surgery)?</fullName>
            </value>
            <value>
                <fullName>Hip, knee or ankle pain or strain (including Sciatica)?</fullName>
            </value>
            <value>
                <fullName>Shoulder or neck or arm/wrist pain or strain?</fullName>
            </value>
            <value>
                <fullName>Tenosynovitis, carpel tunnel or RSI?</fullName>
            </value>
            <value>
                <fullName>Arthritis, rheumatism or painful joints or other musculoskeletal pain?</fullName>
            </value>
            <value>
                <fullName>Any broken bones or torn cartilage that impact your ability to carry out day to day tasks?</fullName>
            </value>
            <value>
                <fullName>Scars/deformations which may restrict physical movement?</fullName>
            </value>
            <value>
                <fullName>Hernia?</fullName>
            </value>
            <value>
                <fullName>Diabetes?</fullName>
            </value>
            <value>
                <fullName>Epilepsy, dizzy/giddy/fainting spells, blackouts or neurological disorder?</fullName>
            </value>
            <value>
                <fullName>Headaches/Migraines?</fullName>
            </value>
            <value>
                <fullName>Mental health condition including severe anxiety, PTSD  and/or depression that may impact your abilities to carry out your professional tasks?</fullName>
            </value>
            <value>
                <fullName>High blood pressure, chest pain or heart or circulatory trouble?</fullName>
            </value>
            <value>
                <fullName>Asthma, chronic bronchitis or other chest problems?</fullName>
            </value>
            <value>
                <fullName>Auto Immune Disease or on immunosuppressant medication?</fullName>
            </value>
            <value>
                <fullName>Nail infections, or chronic skin infections?</fullName>
            </value>
            <value>
                <fullName>Eczema, dermatitis, hives or other skin rashes or complaints?</fullName>
            </value>
            <value>
                <fullName>Have you ever been diagnosed with latex allergy?</fullName>
            </value>
            <value>
                <fullName>Any impairment with vision or hearing?</fullName>
            </value>
            <value>
                <fullName>Have you ever sustained a work-related injury or illness? If so, how was it addressed, and what preventative measures have you taken since then?</fullName>
            </value>
            <value>
                <fullName>Have you had a full medical clearance for any injury identified in these questions?</fullName>
            </value>
            <value>
                <fullName>Have you ever had difficulties wearing PPE including closed in shoes?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>