.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/OHLA__c.field-meta.xml
<CustomField>
    <fullName>OHLA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OHLA</label>
    <type>Checkbox</type>
</CustomField>