.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/OHLA_commence_date__c.field-meta.xml
<CustomField>
    <fullName>OHLA_commence_date__c</fullName>
    <label>OHLA commence date</label>
    <type>Date</type>
</CustomField>