.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/OHLA_end_date__c.field-meta.xml
<CustomField>
    <fullName>OHLA_end_date__c</fullName>
    <label>OHLA end date</label>
    <type>Date</type>
</CustomField>