.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Onboarding_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Base_Url__c</fullName>
    <formula>$Setup.Alliance_General_Settings__c.Non_Portal_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Onboarding Base Url</label>
    <type>Text</type>
</CustomField>