.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Oncology_Chemo__c.field-meta.xml
<CustomField>
    <fullName>Oncology_Chemo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oncology / Chemo</label>
    <type>Checkbox</type>
</CustomField>