.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Oncology_Haematology__c.field-meta.xml
<CustomField>
    <fullName>Oncology_Haematology__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oncology / Haematology</label>
    <type>Checkbox</type>
</CustomField>