.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Open_to_shifts_outside_of_the_roster__c.field-meta.xml
<CustomField>
    <fullName>Open_to_shifts_outside_of_the_roster__c</fullName>
    <inlineHelpText>Would you be open to shifts outside of the roster?</inlineHelpText>
    <label>What would be your preferred shift block</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>