.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Original_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Activation_Date__c</fullName>
    <description>This is the date the contact record was first activated.</description>
    <inlineHelpText>This is the date the contact record was first activated.</inlineHelpText>
    <label>Original Activation Date</label>
    <type>Date</type>
</CustomField>