.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Orthopaedics__c.field-meta.xml
<CustomField>
    <fullName>Orthopaedics__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orthopaedics</label>
    <type>Checkbox</type>
</CustomField>