.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Other_City_3b__c.field-meta.xml
<CustomField>
    <fullName>Other_City_3b__c</fullName>
    <label>Other City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>