.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Overseas_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Overseas_Applicant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overseas Applicant?</label>
    <type>Checkbox</type>
</CustomField>