.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Paediatrics_skill__c.field-meta.xml
<CustomField>
    <fullName>Paediatrics_skill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Paediatrics</label>
    <type>Checkbox</type>
</CustomField>