.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Palliative_Aged_Care__c.field-meta.xml
<CustomField>
    <fullName>Palliative_Aged_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Palliative Aged Care</label>
    <type>Checkbox</type>
</CustomField>