.vscode/allianceuat_compare/force-app/main/default/objects/Contact/fields/Palliative_Care__c.field-meta.xml
<CustomField>
    <fullName>Palliative_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Palliative Care</label>
    <type>Checkbox</type>
</CustomField>